--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,14 +33,14 @@ jobs:
         id: vars
         run: |
           echo "TAG_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-          echo "TAG_VERSION is $GITHUB_ENV"
+          echo "TAG_VERSION is $TAG_VERSION"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Build services
-        run: |
-          docker compose build
+      # - name: Build services
+      #   run: |
+      #     docker compose build
 
       # - name: Tag and push images
       #   run: |
