--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout repository at specific tag
         uses: actions/checkout@v4
         with:
-          ref: "$TAG_VERSION"
+          ref: "${{ env.TAG_VERSION }}"
 
       # - name: Log in to Docker Hub
       #   uses: docker/login-action@v3
@@ -63,10 +63,10 @@ jobs:
       #     for service in "${!IMAGE_MAP[@]}"; do
       #       full_image_name=${IMAGE_MAP[$service]}
 
-      #       echo "Tagging $service as $full_image_name:$TAG_VERSION and $full_image_name:latest"
+      #       echo "Tagging $service as $full_image_name:${{ env.TAG_VERSION }} and $full_image_name:latest"
 
-      #       docker tag $service $full_image_name:$TAG_VERSION
-      #       docker push $full_image_name:$TAG_VERSION
+      #       docker tag $service $full_image_name:${{ env.TAG_VERSION }}
+      #       docker push $full_image_name:${{ env.TAG_VERSION }}
 
       #       docker tag $service $full_image_name:latest
       #       docker push $full_image_name:latest
