--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,36 +38,36 @@ jobs:
         with:
           ref: "${{ env.TAG_VERSION }}"
 
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # - name: Build services
-      #   run: |
-      #     docker compose build
+      - name: Build services
+        run: |
+          docker compose build
 
-      # - name: Tag and push images
-      #   run: |
-      #     # Define your custom mapping here
-      #     declare -A IMAGE_MAP=(
-      #       [openas2]=${{ secrets.DOCKERHUB_USERNAME }}/openas2
-      #       [openas2_webui]=${{ secrets.DOCKERHUB_USERNAME }}/openas2_webui
-      #     )
+      - name: Tag and push images
+        run: |
+          # Define your custom mapping here
+          declare -A IMAGE_MAP=(
+            [openas2]=${{ secrets.DOCKERHUB_USERNAME }}/openas2
+            [openas2_webui]=${{ secrets.DOCKERHUB_USERNAME }}/openas2_webui
+          )
 
-      #     for service in "${!IMAGE_MAP[@]}"; do
-      #       full_image_name=${IMAGE_MAP[$service]}
+          for service in "${!IMAGE_MAP[@]}"; do
+            full_image_name=${IMAGE_MAP[$service]}
 
-      #       echo "Tagging $service as $full_image_name:${{ env.TAG_VERSION }} and $full_image_name:latest"
+            echo "Tagging $service as $full_image_name:${{ env.TAG_VERSION }} and $full_image_name:latest"
 
-      #       docker tag $service $full_image_name:${{ env.TAG_VERSION }}
-      #       docker push $full_image_name:${{ env.TAG_VERSION }}
+            docker tag $service $full_image_name:${{ env.TAG_VERSION }}
+            docker push $full_image_name:${{ env.TAG_VERSION }}
 
-      #       docker tag $service $full_image_name:latest
-      #       docker push $full_image_name:latest
-      #     done
+            docker tag $service $full_image_name:latest
+            docker push $full_image_name:latest
+          done
